--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,5 +2,5 @@
 
 {% block main %}
 <h1 class="page-header">About</h1>
-<p>This webpage is about {{ name }}.</p>
+<p>This webpage is about a Flask based application that can accept and display profile information{{ name }}.</p>
 {% endblock %}
