--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -13,6 +13,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
+            <li><a href="{{ url_for('profile') }}">Create Profile</a></li>
+            <li><a href="{{ url_for('profiles') }}">All Profiles</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
