--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -42,8 +42,8 @@
         <textarea rows="5" cols="50" id="biography" name="biography"></textarea> <br> <br>
     </div>
     <div class="form-group">
-        <label for="file">Upload a picture of yourself.</label> <br>
-        <input type="file" name="file" class="form-control" /> <br>
+        <label for="pic">Upload a picture of yourself.</label> <br>
+        <input type="file" name="pic" /> <br>
     </div>
     <button type="submit" id="button" class="btn btn-primary">Submit!</button>
 </form>
